Modified services.html issue with img

--- a/services.html
+++ b/services.html
@@ -127,7 +127,7 @@
       <section
         class="bg-container-img"
         style="
-          background-image: url(/img/service.jpg);
+          background-image: url(img/service.jpg);
           background-position: 50% 40%;
         "
       >
