--- a/services.html
+++ b/services.html
@@ -163,7 +163,7 @@
                 </p>
               </div>
               <div class="col-md-4">
-                <img class="rounded" src="/img/buy.jpg" width="400px" alt="" />
+                <img class="rounded" src="img/buy.jpg" width="400px" alt="" />
               </div>
             </div>
             <div class="row mt-5 mb-5">
