--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6">
-                <h3>MAIN OFFISE</h3>
+                <h3>MAIN OFFICE</h3>
                 <p>
                   235 SE 1st Street, <br />
                   Miami, FL 33131
