Made changes in footer

--- a/about-us.html
+++ b/about-us.html
@@ -260,8 +260,10 @@
                 ></a>
               </li>
               <li class="ms-3">
-                <a class="link-dark" href="#"
-                  ><i class="bi bi-youtube" style="font-size: 2rem"></i
+                <a
+                  class="link-dark"
+                  href="https://www.linkedin.com/company/euroexchangegroup/about/"
+                  ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                 ></a>
               </li>
             </ul>
