--- a/contact-us.html
+++ b/contact-us.html
@@ -267,18 +267,25 @@
                   </p>
                   <ul class="list-unstyled d-flex justify-content-center">
                     <li class="ms-3">
-                      <a class="link-dark" href="#">
+                      <a
+                        class="link-dark"
+                        href="https://www.facebook.com/EuroExchangeUSA/"
+                      >
                         <i class="bi bi-facebook" style="font-size: 2rem"></i>
                       </a>
                     </li>
                     <li class="ms-3">
-                      <a class="link-dark" href="#"
+                      <a
+                        class="link-dark"
+                        href="https://www.instagram.com/euroexchange/"
                         ><i class="bi bi-instagram" style="font-size: 2rem"></i
                       ></a>
                     </li>
                     <li class="ms-3">
-                      <a class="link-dark" href="#"
-                        ><i class="bi bi-youtube" style="font-size: 2rem"></i
+                      <a
+                        class="link-dark"
+                        href="https://www.linkedin.com/company/euroexchangegroup/about/"
+                        ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                       ></a>
                     </li>
                   </ul>
@@ -356,8 +363,10 @@
                 ></a>
               </li>
               <li class="ms-3">
-                <a class="link-dark" href="#"
-                  ><i class="bi bi-youtube" style="font-size: 2rem"></i
+                <a
+                  class="link-dark"
+                  href="https://www.linkedin.com/company/euroexchangegroup/about/"
+                  ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                 ></a>
               </li>
             </ul>
