--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
       </section>
 
-      <section class="background-image">
+      <section style="background-image: url(img/image.png)">
         <div class="background-container">
           <div class="container pt-5 pb-5">
             <div class="row text-center text-white">
