--- a/location-doral.html
+++ b/location-doral.html
@@ -249,28 +249,47 @@
                   (with purchase)
                 </p>
 
-                <p>PHONE: 305.377.2536</p>
-                <p>EMAIL: info@euroexchangeusa.com</p>
+                <p>
+                  PHONE:
+                  <a class="text-decoration-none" href="telto:+13053772536"
+                    >305.377.2536</a
+                  >
+                </p>
+                <p>
+                  EMAIL:
+                  <a
+                    class="text-decoration-none"
+                    href="mailto:info@euroexchangeusa.com"
+                    >info@euroexchangeusa.com</a
+                  >
+                </p>
                 <ul class="list-unstyled d-flex justify-content-center">
                   <li class="ms-3">
-                    <a class="link-dark" href="#">
+                    <a
+                      class="link-dark"
+                      href="https://www.facebook.com/EuroExchangeUSA/"
+                    >
                       <i class="bi bi-facebook" style="font-size: 2rem"></i>
                     </a>
                   </li>
                   <li class="ms-3">
-                    <a class="link-dark" href="#"
+                    <a
+                      class="link-dark"
+                      href="https://www.instagram.com/euroexchange/"
                       ><i class="bi bi-instagram" style="font-size: 2rem"></i
                     ></a>
                   </li>
                   <li class="ms-3">
-                    <a class="link-dark" href="#"
-                      ><i class="bi bi-youtube" style="font-size: 2rem"></i
+                    <a
+                      class="link-dark"
+                      href="https://www.linkedin.com/company/euroexchangegroup/about/"
+                      ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                     ></a>
                   </li>
                 </ul>
 
-                <a href="#" class="btn btn-outline-secondary"
-                  >DORAL Location Info</a
+                <a href="locations.html" class="btn btn-outline-secondary"
+                  >Miami Location Info</a
                 >
               </div>
             </div>
@@ -348,8 +367,10 @@
                 ></a>
               </li>
               <li class="ms-3">
-                <a class="link-dark" href="#"
-                  ><i class="bi bi-youtube" style="font-size: 2rem"></i
+                <a
+                  class="link-dark"
+                  href="https://www.linkedin.com/company/euroexchangegroup/about/"
+                  ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                 ></a>
               </li>
             </ul>
