--- a/locations.html
+++ b/locations.html
@@ -253,23 +253,30 @@
                 <p>EMAIL: info@euroexchangeusa.com</p>
                 <ul class="list-unstyled d-flex justify-content-center">
                   <li class="ms-3">
-                    <a class="link-dark" href="#">
+                    <a
+                      class="link-dark"
+                      href="https://www.facebook.com/EuroExchangeUSA/"
+                    >
                       <i class="bi bi-facebook" style="font-size: 2rem"></i>
                     </a>
                   </li>
                   <li class="ms-3">
-                    <a class="link-dark" href="#"
+                    <a
+                      class="link-dark"
+                      href="https://www.instagram.com/euroexchange/"
                       ><i class="bi bi-instagram" style="font-size: 2rem"></i
                     ></a>
                   </li>
                   <li class="ms-3">
-                    <a class="link-dark" href="#"
-                      ><i class="bi bi-youtube" style="font-size: 2rem"></i
+                    <a
+                      class="link-dark"
+                      href="https://www.linkedin.com/company/euroexchangegroup/about/"
+                      ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                     ></a>
                   </li>
                 </ul>
 
-                <a href="#" class="btn btn-outline-secondary"
+                <a href="location-doral.html" class="btn btn-outline-secondary"
                   >DORAL Location Info</a
                 >
               </div>
@@ -348,8 +355,10 @@
                 ></a>
               </li>
               <li class="ms-3">
-                <a class="link-dark" href="#"
-                  ><i class="bi bi-youtube" style="font-size: 2rem"></i
+                <a
+                  class="link-dark"
+                  href="https://www.linkedin.com/company/euroexchangegroup/about/"
+                  ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                 ></a>
               </li>
             </ul>
